--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,16 @@
-print("Hello Ahmed! This is my first GitHub Python project.")
+"terminal.integrated.defaultProfile.windows": "PowerShell",
+"terminal.integrated.profiles.windows": {
+  "PowerShell": {
+    "source": "PowerShell"
+  },
+  "Command Prompt": {
+    "path": [
+      "${env:windir}\\Sysnative\\cmd.exe",
+      "${env:windir}\\System32\\cmd.exe"
+    ],
+    "args": []
+  },
+  "Git Bash": {
+    "path": "C:\\Program Files\\Git\\git-bash.exe"
+  }
+}
